--- a/static/stat120/Day25.Rmd
+++ b/static/stat120/Day25.Rmd
@@ -103,7 +103,7 @@ class: middle
 
 # Post-ANOVA
 
-.bql.font90[ Inference .b[AFTER] doing .b[ANOVA] to compare means for several groups:
+.bq.font90[ Inference .b[AFTER] doing .b[ANOVA] to compare means for several groups:
 - Confidence interval for a single mean
 - Confidence interval for a difference in two means
 - Pairwise t-test for a difference in two means
@@ -112,20 +112,6 @@ class: middle
 
 ---
 
-class: middle
-
-# ANOVA for Difference in Means
-
-.bqt.font90[.b[Data:] Random samples of size $n_1, n_2, \cdots , n_k$ from each of k populations (or groups)
-
-.b[Summary statistics:]
-
-  - Sample mean for each group
-  - Std. dev. for each group
-  - Mean and std. dev. for all values
-]
-
----
 
 class: middle
 
@@ -140,6 +126,7 @@ $$H_a: \text{at least one } \mu_i \text{ is different}$$
 
 ---
 
+<br>
 
 # Cuckoo Birds
 
@@ -154,7 +141,6 @@ $$H_a: \text{at least one } \mu_i \text{ is different}$$
 ]
 
 .pull-right-40[
-<br>
 <br>
 <center>
 <img src="images/cuckoo.jpg" width="80%" height="80%"> <br>
@@ -208,14 +194,14 @@ class: inverse, middle
 library(dplyr)
 Cuckoo <- read.csv("https://raw.githubusercontent.com/deepbas/stat120datasets/main/cuckoos.csv")
 Cuckoo <- Cuckoo %>%
-  mutate(species = as.factor(species))   # change species to a categorical variable
+  mutate(species = factor(species))   # change species to a categorical variable
 
 stat <- Cuckoo %>% 
-  group_by(species) %>%  # group by type
-  summarize(mean = mean(length),
+  group_by(species) %>%  # group by species
+  summarize(mean = mean(length), # summary of quantitative var
             sd = sd(length), 
-            n = length(length)) %>% 
-  as.data.frame()
+            n = length(length)) %>%
+  data.frame()
 knitr::kable(stat)
 ```
 
@@ -259,7 +245,7 @@ Make sure that all assumptions for ANOVA are met:
 
 ---
 
-`r chunk_reveal("normality", widths= c(0.3,0.7), font_size_code="70%", title = "## Approximate normality in groups (1b)")`
+`r chunk_reveal("normality", widths= c(0.3,0.7), font_size_code="70%", title = "## Approximate normality in groups")`
 
 .scroll-output[
 ```{r normality, fig.width = 3, fig.height = 3.5, out.width = "100%", include=FALSE}
@@ -384,6 +370,7 @@ knitr::kable(stat)
 
 .code70[
 ```{r, collapse=TRUE}
+MSE <- 0.8193847
 (stat[4,2] - stat[6,2]) + c(-1,1)* (qt(1-0.05/2, df=114))* sqrt(MSE*(1/stat[4,4] + 1/stat[6,4]))
 ```
 ]
@@ -479,11 +466,11 @@ class: action
 
 <br>
 .bql[
-- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Let's go over to the [course helper page](https://stat120-winter24.netlify.app/)
 - Please do the class activity and let me know if you have any questions
 - Feel free to talk to your neighbor
 ]
 ]
 
 
-`r countdown(minutes = 15, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+`r countdown(minutes = 30, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
